canary/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: web
spec:
  selector:
    app: web
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
